// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Choiceboxes /> renders correctly 1`] = `
<div
  className="choice-boxes -teal"
>
  <button
    className="choice-box -active"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    Personal
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    Business
  </button>
</div>
`;

exports[`<Choiceboxes /> renders correctly 2`] = `
<div
  className="choice-boxes -teal"
>
  <button
    className="choice-box -active"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    13
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    23
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    43
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    45
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    25763
  </button>
</div>
`;

exports[`<Choiceboxes /> renders correctly 3`] = `
<div
  className="choice-boxes -black"
>
  <button
    className="choice-box -active"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    13
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    23
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    45
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    47
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    style={Object {}}
    type="button"
  >
    25763
  </button>
  <button
    className="choice-box"
    onClick={[Function]}
    type="button"
  >
    clear
  </button>
</div>
`;
